# vrep-naoqi-simulation

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindNAOqiSIM.cmake
dependencies/: hal.xml
include/: Interface.h  SensorsEnum.h
models/: V50_nao_model_vrep.ttm  V50_nao_model_vrep_fixed_cams.ttm  simple_nao_model_.ttm
scripts/: kick_simulations.sh  setup_interface.sh  simulated_nao.sh  simulation_match.sh  simulation_single_simple.sh  simulation_single_v50.sh  simulator_startup_stiffness.py
src/: Interface.cpp  main.cpp
